--- a/services.html
+++ b/services.html
@@ -216,11 +216,11 @@
       <div class="footer-join">
         <nav class="menu-footer__nav">
           <ul class="menu-footer__list">
-            <li class="menu-footer__item"><a href="">Despre companie</a></li>
-            <li class="menu-footer__item"><a href="">Directii</a></li>
-            <li class="menu-footer__item"><a href="">Servicii</a></li>
-            <li class="menu-footer__item"><a href="">Politica de confidalitate</a></li>
-            <li class="menu-footer__item"><a href="">Contacte</a></li>
+            <li class="menu-footer__item"><a href="/Griftrans/about.html">Despre companie</a></li>
+            <li class="menu-footer__item"><a href="/Griftrans/directions.html">Directii</a></li>
+            <li class="menu-footer__item"><a href="/Griftrans/services.html">Servicii</a></li>
+            <li class="menu-footer__item"><a href="/Griftrans/kuki.html">Politica de confidalitate</a></li>
+            <li class="menu-footer__item"><a href="/Griftrans/contact.html">Contacte</a></li>
           </ul>
         </nav>
         <div class="footer_contact_btn">
