--- a/services.html
+++ b/services.html
@@ -37,7 +37,7 @@
                     <path d="M10.3889 7.6389C9.62807 7.6389 8.89167 7.51667 8.20723 7.29057C7.9964 7.22333 7.755 7.27223 7.58696 7.4403L6.24253 8.7878C4.51003 7.9078 3.0953 6.49307 2.2153 4.76363L3.55973 3.41307C3.7278 3.245 3.77667 3.00363 3.70946 2.7928C3.48336 2.10836 3.36113 1.37196 3.36113 0.61113C3.3611 0.271935 3.08917 0 2.75 0H0.611102C0.275 0 0 0.271935 0 0.611102C0 6.34944 4.65056 11 10.3889 11C10.7281 11 11 10.7281 11 10.3889V8.25C11 7.91083 10.7281 7.6389 10.3889 7.6389Z" fill="#ADADAD"/>
                   </svg>+40753 005 599</a>
                 </li>
-                <li class="header-item contact"><a href="mailto:office@frigotranslogistic.ro" class="auth-list">
+                <li class="header-item contact header-item contact_mail"><a href="mailto:office@frigotranslogistic.ro" class="auth-list">
                   office@frigotranslogistic.ro</a></li>
               </ul>
               <div class="dropdown">
@@ -51,23 +51,34 @@
           </nav>
           <nav class="menu-top__nav">
             <ul class="menu-top__list">
-              <li class="menu-top__item"><a href="/Griftrans/index.html" class="menu-top__link">Acasa</a></li>
-              <li class="menu-top__item"><a href="/Griftrans/about.html" class="menu-top__link">Despre companie</a></li>
-              <li class="menu-top__item"><a href="/Griftrans/directions.html" class="menu-top__link">Directii</a></li>
-              <li class="menu-top__item"><a href="/Griftrans/services.html" class="menu-top__link">Servicii</a></li>
-              <li class="menu-top__item"><a href="/Griftrans/contact.html" class="menu-top__link">Contacte</a></li>
-          </ul>
+              <li class="menu-top__item"><a href="/index.html" class="menu-top__link">Acasa</a></li>
+              <li class="menu-top__item"><a href="/about.html" class="menu-top__link">Despre companie</a></li>
+              <li class="menu-top__item"><a href="/directions.html" class="menu-top__link">Directii</a></li>
+              <li class="menu-top__item"><a href="/services.html" class="menu-top__link">Servicii</a></li>
+              <li class="menu-top__item"><a href="/contact.html" class="menu-top__link">Contacte</a></li>
+            </ul>
             <button data-modal-open type="button" class="button-hero button">
               Solicitați un apel
             </button>
           </nav>
         </div>
-
-        <div id="burger">
-          <img src="" alt="">
+        <div class="navbar">
+          <div class="container_menu nav-container">
+            <input class="checkbox" type="checkbox" name="" id="" />
+            <div class="hamburger-lines">
+              <span class="line line1"></span>
+              <span class="line line2"></span>
+              <span class="line line3"></span>
+            </div>
+            <div class="menu-items">
+              <li><a href="/index.html">Acasa</a></li>
+              <li><a href="/about.html">Despre companie</a></li>
+              <li><a href="/directions.html">Directii</a></li>
+              <li><a href="/services.html">Servicii</a></li>
+              <li><a href="/contact.html">Contacte</a></li>
+            </div>
+          </div>
         </div>
-
-
       </div>
     </header>
 
@@ -216,11 +227,11 @@
       <div class="footer-join">
         <nav class="menu-footer__nav">
           <ul class="menu-footer__list">
-            <li class="menu-footer__item"><a href="/Griftrans/about.html">Despre companie</a></li>
-            <li class="menu-footer__item"><a href="/Griftrans/directions.html">Directii</a></li>
-            <li class="menu-footer__item"><a href="/Griftrans/services.html">Servicii</a></li>
-            <li class="menu-footer__item"><a href="/Griftrans/kuki.html">Politica de confidalitate</a></li>
-            <li class="menu-footer__item"><a href="/Griftrans/contact.html">Contacte</a></li>
+            <li class="menu-footer__item"><a href="">Despre companie</a></li>
+            <li class="menu-footer__item"><a href="">Directii</a></li>
+            <li class="menu-footer__item"><a href="">Servicii</a></li>
+            <li class="menu-footer__item"><a href="">Politica de confidalitate</a></li>
+            <li class="menu-footer__item"><a href="">Contacte</a></li>
           </ul>
         </nav>
         <div class="footer_contact_btn">
