--- a/contact.html
+++ b/contact.html
@@ -51,11 +51,11 @@
           </nav>
           <nav class="menu-top__nav">
             <ul class="menu-top__list">
-              <li class="menu-top__item"><a href="/index.html" class="menu-top__link">Acasa</a></li>
-              <li class="menu-top__item"><a href="/about.html" class="menu-top__link">Despre companie</a></li>
-              <li class="menu-top__item"><a href="/directions.html" class="menu-top__link">Directii</a></li>
-              <li class="menu-top__item"><a href="/services.html" class="menu-top__link">Servicii</a></li>
-              <li class="menu-top__item"><a href="/contact.html" class="menu-top__link">Contacte</a></li>
+              <li class="menu-top__item"><a href="/Griftrans/Griftrans/index.html" class="menu-top__link">Acasa</a></li>
+              <li class="menu-top__item"><a href="/Griftrans/Griftrans/about.html" class="menu-top__link">Despre companie</a></li>
+              <li class="menu-top__item"><a href="/Griftrans/Griftrans/directions.html" class="menu-top__link">Directii</a></li>
+              <li class="menu-top__item"><a href="/Griftrans/Griftrans/services.html" class="menu-top__link">Servicii</a></li>
+              <li class="menu-top__item"><a href="/Griftrans/Griftrans/contact.html" class="menu-top__link">Contacte</a></li>
             </ul>
             <button data-modal-open type="button" class="button-hero button">
               Solicitați un apel
@@ -71,11 +71,11 @@
               <span class="line line3"></span>
             </div>
             <div class="menu-items">
-              <li><a href="/index.html">Acasa</a></li>
-              <li><a href="/about.html">Despre companie</a></li>
-              <li><a href="/directions.html">Directii</a></li>
-              <li><a href="/services.html">Servicii</a></li>
-              <li><a href="/contact.html">Contacte</a></li>
+              <li><a href="/Griftrans/index.html">Acasa</a></li>
+              <li><a href="/Griftrans/about.html">Despre companie</a></li>
+              <li><a href="/Griftrans/directions.html">Directii</a></li>
+              <li><a href="/Griftrans/services.html">Servicii</a></li>
+              <li><a href="/Griftrans/contact.html">Contacte</a></li>
             </div>
           </div>
         </div>
@@ -221,3 +221,4 @@
 
 </body>
 </html>
+/Griftrans/Griftrans
