--- a/servicii_detaliata.html
+++ b/servicii_detaliata.html
@@ -71,11 +71,11 @@
               <span class="line line3"></span>
             </div>
             <div class="menu-items">
-              <li><a href="/Griftrans/Griftrans/index.html">Acasa</a></li>
-              <li><a href="/Griftrans/Griftrans/about.html">Despre companie</a></li>
-              <li><a href="/Griftrans/Griftrans/directions.html">Directii</a></li>
-              <li><a href="/Griftrans/Griftrans/services.html">Servicii</a></li>
-              <li><a href="/Griftrans/Griftrans/contact.html">Contacte</a></li>
+              <li><a href="/Griftrans/index.html">Acasa</a></li>
+              <li><a href="/Griftrans/about.html">Despre companie</a></li>
+              <li><a href="/Griftrans/directions.html">Directii</a></li>
+              <li><a href="/Griftrans/services.html">Servicii</a></li>
+              <li><a href="/Griftrans/contact.html">Contacte</a></li>
             </div>
           </div>
         </div>
