--- a/contact.html
+++ b/contact.html
@@ -51,11 +51,11 @@
           </nav>
           <nav class="menu-top__nav">
             <ul class="menu-top__list">
-              <li class="menu-top__item"><a href="/Griftrans/Griftrans/index.html" class="menu-top__link">Acasa</a></li>
-              <li class="menu-top__item"><a href="/Griftrans/Griftrans/about.html" class="menu-top__link">Despre companie</a></li>
-              <li class="menu-top__item"><a href="/Griftrans/Griftrans/directions.html" class="menu-top__link">Directii</a></li>
-              <li class="menu-top__item"><a href="/Griftrans/Griftrans/services.html" class="menu-top__link">Servicii</a></li>
-              <li class="menu-top__item"><a href="/Griftrans/Griftrans/contact.html" class="menu-top__link">Contacte</a></li>
+              <li class="menu-top__item"><a href="/Griftrans/index.html" class="menu-top__link">Acasa</a></li>
+              <li class="menu-top__item"><a href="/Griftrans/about.html" class="menu-top__link">Despre companie</a></li>
+              <li class="menu-top__item"><a href="/Griftrans/directions.html" class="menu-top__link">Directii</a></li>
+              <li class="menu-top__item"><a href="/Griftrans/services.html" class="menu-top__link">Servicii</a></li>
+              <li class="menu-top__item"><a href="/Griftrans/contact.html" class="menu-top__link">Contacte</a></li>
             </ul>
             <button data-modal-open type="button" class="button-hero button">
               Solicitați un apel
