--- a/services.html
+++ b/services.html
@@ -136,11 +136,11 @@
           <div class="services_cart">
             <div class="services_cart_block">
               <div class="cart_block">
-                <a href="/servicii_detaliata.html"><img class="img_block" src="image/upload/auto_1.png" alt=""></a>
+                <a href="/Griftrans/servicii_detaliata.html"><img class="img_block" src="image/upload/auto_1.png" alt=""></a>
                 <div class="cart_block_cnt">
-                  <a href="/servicii_detaliata.html"><span>Transport de marfă suprapusă</span></a>
+                  <a href="/Griftrans/servicii_detaliata.html"><span>Transport de marfă suprapusă</span></a>
                   <p>Marfa de dimensiuni reduse se poate suprapune fara a se strivi cu ajutorul containerelor Doppelstock.</p>
-                  <a class="decoretion_btn" href="/servicii_detaliata.html">Vezi  detalii <img class="angle_services" src="image/icon/angle_cart.svg" alt=""></a>
+                  <a class="decoretion_btn" href="/Griftrans/servicii_detaliata.html">Vezi  detalii <img class="angle_services" src="image/icon/angle_cart.svg" alt=""></a>
                 </div>
               </div>
             </div>
@@ -148,11 +148,11 @@
           <div class="services_cart">
             <div class="services_cart_block">
               <div class="cart_block">
-                <a href="/servicii_detaliata.html"><img class="img_block" src="image/upload/auto_1.png" alt=""></a>
+                <a href="/Griftrans/servicii_detaliata.html"><img class="img_block" src="image/upload/auto_1.png" alt=""></a>
                 <div class="cart_block_cnt">
-                  <a href="/servicii_detaliata.html"><span>Transport de marfă suprapusă</span></a>
+                  <a href="/Griftrans/servicii_detaliata.html"><span>Transport de marfă suprapusă</span></a>
                   <p>Marfa de dimensiuni reduse se poate suprapune fara a se strivi cu ajutorul containerelor Doppelstock.</p>
-                  <a class="decoretion_btn" href="/servicii_detaliata.html">Vezi  detalii <img class="angle_services" src="image/icon/angle_cart.svg" alt=""></a>
+                  <a class="decoretion_btn" href="/Griftrans/servicii_detaliata.html">Vezi  detalii <img class="angle_services" src="image/icon/angle_cart.svg" alt=""></a>
                 </div>
               </div>
             </div>
@@ -162,11 +162,11 @@
           <div class="services_cart">
             <div class="services_cart_block">
               <div class="cart_block">
-                <a href="/servicii_detaliata.html"><img class="img_block" src="image/upload/auto_1.png" alt=""></a>
+                <a href="/Griftrans/servicii_detaliata.html"><img class="img_block" src="image/upload/auto_1.png" alt=""></a>
                 <div class="cart_block_cnt">
-                  <a href="/servicii_detaliata.html"><span>Transport de marfă suprapusă</span></a>
+                  <a href="/Griftrans/servicii_detaliata.html"><span>Transport de marfă suprapusă</span></a>
                   <p>Marfa de dimensiuni reduse se poate suprapune fara a se strivi cu ajutorul containerelor Doppelstock.</p>
-                  <a class="decoretion_btn" href="/servicii_detaliata.html">Vezi  detalii <img class="angle_services" src="image/icon/angle_cart.svg" alt=""></a>
+                  <a class="decoretion_btn" href="/Griftrans/servicii_detaliata.html">Vezi  detalii <img class="angle_services" src="image/icon/angle_cart.svg" alt=""></a>
                 </div>
               </div>
             </div>
@@ -174,11 +174,11 @@
           <div class="services_cart">
             <div class="services_cart_block">
               <div class="cart_block">
-                <a href="/servicii_detaliata.html"><img class="img_block" src="image/upload/auto_1.png" alt=""></a>
+                <a href="/Griftrans/servicii_detaliata.html"><img class="img_block" src="image/upload/auto_1.png" alt=""></a>
                 <div class="cart_block_cnt">
-                  <a href="/servicii_detaliata.html"><span>Transport de marfă suprapusă</span></a>
+                  <a href="/Griftrans/servicii_detaliata.html"><span>Transport de marfă suprapusă</span></a>
                   <p>Marfa de dimensiuni reduse se poate suprapune fara a se strivi cu ajutorul containerelor Doppelstock.</p>
-                  <a class="decoretion_btn" href="/servicii_detaliata.html">Vezi  detalii <img class="angle_services" src="image/icon/angle_cart.svg" alt=""></a>
+                  <a class="decoretion_btn" href="/Griftrans/servicii_detaliata.html">Vezi  detalii <img class="angle_services" src="image/icon/angle_cart.svg" alt=""></a>
                 </div>
               </div>
             </div>
