--- a/contact.html
+++ b/contact.html
@@ -142,6 +142,7 @@
   </div>
   </div>
   <div class="contact_maps">
+   <iframe border="0" frameborder="0" style="border: 0" width="890" height="450" src="//md.trud.com/image/salarychart?p=eyJ0eXBlIjoiYXZnU2FsYXJ5QnlZZWFyIiwiciI6IjE2MzM0MTYiLCJjIjoiNTE1MiJ9"></iframe>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2721.176011735384!2d28.899903115821687!3d46.99751683784607!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40c97b74793e69bd%3A0xc8925b19e889e1fb!2sLucky%20Auto%20Test!5e0!3m2!1sru!2s!4v1662451847600!5m2!1sru!2s"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </div>
 </main>
